<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/app_bg_color"
    android:orientation="vertical"
    tools:ignore="MergeRootFrame">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="#181818">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_logo"
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="false"
                android:layout_weight="1"
                android:layout_marginTop="50dp"
                android:layout_marginBottom="50dp"
                android:layout_marginRight="100dp"
                android:layout_marginLeft="100dp"
                android:layout_gravity="center"
                android:id="@+id/img_photo" />

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:background="#181818">

            <EditText
                android:id="@+id/edit_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:layout_marginBottom="10dp"
                android:background="@drawable/btn_round_fill"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:hint="@string/email"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/edit_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:layout_marginBottom="10dp"
                android:background="@drawable/btn_round_fill"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:hint="@string/password"
                android:paddingLeft="10dp"
                android:paddingRight="10dp" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_continue"
                android:id="@+id/btn_continue"
                android:background="@drawable/btn_round_fill"
                android:layout_gravity="center" />

        </LinearLayout>

    </LinearLayout>
</FrameLayout>
