<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/app_bg_color"
    android:orientation="vertical"
    tools:ignore="MergeRootFrame">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/img_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:src="@drawable/arrow_back"
                android:layout_alignParentStart="true"
                android:padding="5dp"
                android:layout_marginRight="50dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp" />

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_logo"
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="false"
                android:layout_weight="1"
                android:layout_marginTop="50dp"
                android:layout_marginBottom="50dp" />

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_alignParentEnd="true"
                android:src="@drawable/hear_phone"
                android:layout_alignParentBottom="false"
                android:layout_gravity="bottom" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:paddingLeft="20dp"
            android:paddingRight="10dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:background="#181818">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="Sign in with"
                android:id="@+id/textView"
                android:textColor="@android:color/darker_gray"
                android:paddingBottom="10dp" />

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/btn_phone_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:background="@drawable/btn_round_fill"
                android:padding="10dp"
                android:layout_marginBottom="10dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/phone_icon"
                    android:padding="5dp"
                    android:layout_gravity="center" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/black"
                    android:padding="10dp"
                    android:text="@string/phone_number"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textAlignment="center"
                    android:gravity="center_horizontal" />
            </LinearLayout>

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/btn_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:background="@drawable/btn_round_fill"
                android:padding="10dp"
                android:layout_marginBottom="10dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/email_icon"
                    android:padding="5dp"
                    android:layout_gravity="center" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/black"
                    android:padding="10dp"
                    android:text="@string/email"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textAlignment="center"
                    android:gravity="center_horizontal" />
            </LinearLayout>
        </LinearLayout>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="Don&apos;t have an account?"
                    android:textColor="@android:color/darker_gray"
                    android:gravity="center" />

                <TextView
                    android:id="@+id/tv_link_signup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/signup"
                    android:textColor="@android:color/white"
                    android:paddingLeft="5dp"
                    android:textColorLink="@android:color/tertiary_text_dark" />
            </TableRow>

        </TableLayout>

    </LinearLayout>
</FrameLayout>
