<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/app_bg_color"
    android:orientation="vertical"
    tools:ignore="MergeRootFrame">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="#181818">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_logo"
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="false"
                android:layout_weight="1"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginRight="120dp"
                android:layout_marginLeft="120dp"
                android:layout_gravity="center" />

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:background="#181818">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/verify_phone_number"
                android:textColor="@android:color/darker_gray"
                android:paddingBottom="30dp"
                android:layout_gravity="center" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="Please verify your phone number so we know you&apos;re a real person."
                android:textColor="@android:color/darker_gray"
                android:paddingBottom="30dp"
                android:layout_gravity="center"
                android:gravity="center" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_round_fill"
                android:layout_marginBottom="10dp">

                <TextView
                    android:id="@+id/tv_country_code"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="US +1"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp" />

                <ImageView
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:id="@+id/imageView"
                    android:background="@android:color/darker_gray" />

                <EditText
                    android:id="@+id/edit_phone_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone"
                    android:ems="10"
                    android:background="@drawable/btn_round_fill"
                    android:hint="(999) 999-9999"
                    android:padding="10dp" />

            </LinearLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_continue"
                android:id="@+id/btn_continue"
                android:background="@drawable/btn_round_fill"
                android:layout_gravity="center" />

        </LinearLayout>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:gravity="center_vertical" >

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="By continuing, you agree to our"
                    android:textColor="@android:color/darker_gray"
                    android:gravity="center"
                    android:layout_span="3" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal" >

                <TextView
                    android:id="@+id/tv_link_terms"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="Terms of Use"
                    android:textColor="@android:color/white"
                    android:gravity="center"
                    android:textColorLink="@android:color/tertiary_text_dark" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="and"
                    android:textColor="@android:color/darker_gray"
                    android:gravity="center"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp" />

                <TextView
                    android:id="@+id/tv_link_policy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="Privacy Policy"
                    android:textColor="@android:color/white"
                    android:gravity="center"
                    android:textColorLink="@android:color/tertiary_text_dark" />
            </TableRow>
        </TableLayout>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            android:background="@color/app_bg_color" >

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="Already have an account?"
                    android:textColor="@android:color/darker_gray"
                    android:gravity="center" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/signin"
                    android:id="@+id/tv_link_signin"
                    android:textColor="@android:color/white"
                    android:paddingLeft="5dp"
                    android:textColorLink="@android:color/tertiary_text_dark" />
            </TableRow>
        </TableLayout>

    </LinearLayout>
</FrameLayout>
